JavaDoc Source Documentation, replace sun.misc Base64 with commons